# pref_voting

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _pairwise_comparison_test.ipynb  _pref_eq.ipynb  axioms.ipynb  change_rankings.ipynb  condorcet_efficiency2.csv  est_std_error.ipynb  ex.ipynb  example.ipynb  find_counterexamples.ipynb  maximal_lotteries.ipynb  output.csv  pref_voting_testing.ipynb  prof.csv  profile.pkl  pyproject.toml  refinements-split-cycle.ipynb  river_test.ipynb  scratch.ipynb  setup.py  t.abif  t.csv  t.soc  test-pareto-dominated.ipynb  test.csv  test.ipynb  test2.ipynb  test_new_ranked_pairs.ipynb  test_truncated_linear.csv  testing.ipynb  update_generate_profiles.ipynb  update_generate_profiles_2.ipynb  update_version.py  uprof.pkl  (+5 more)
axiom_tables/: axiom_violations_dominance_axioms_profile.html  axiom_violations_dominance_axioms_profilewithties.html  axiom_violations_invariance_axioms_profile.html  axiom_violations_invariance_axioms_profilewithties.html  axiom_violations_monotonicity_axioms_profile.html  axiom_violations_monotonicity_axioms_profilewithties.html  axiom_violations_strategic_axioms_profile.html  axiom_violations_strategic_axioms_profilewithties.html  axiom_violations_variable_candidate_axioms_profile.html  axiom_violations_variable_candidate_axioms_profilewithties.html  axiom_violations_variable_voter_axioms_profile.html  axiom_violations_variable_voter_axioms_profilewithties.html  citations.json
docs/: requirements.txt
examples/: README.md  collective_decision_procedures.ipynb  comparing_voting_methods.ipynb  condorcet_efficiency.csv  condorcet_efficiency.ipynb  election_types.ipynb  pref_voting_overview.ipynb  voting_method_diffs.csv
experiments/: run_rc_manipulations.py
howto/: collective_decision_procedures.ipynb  condorcet_efficiency.ipynb  election_types.ipynb  pref_voting_overview.ipynb
paper/: paper.bib  paper.md
pref_voting/: __init__.py  analysis.py  axiom.py  axiom_helpers.py  axioms.py  c1_methods.py  coalition_formation.py  combined_methods.py  condorcet_cycle.csv  condorcet_cycle.soc  create_methods.py  dominance_axioms.py  generate_profiles.py  generate_spatial_profile_from_binned_distribution.py  generate_spatial_profiles.py  generate_utility_profiles.py  generate_weighted_majority_graphs.py  grade_methods.py  grade_profiles.py  helper.py  invariance_axioms.py  iterative_methods.py  mappings.py  margin_based_methods.py  margin_based_methods_old.py  monotonicity_axioms.py  num_evaluation_method.py  other_axioms.py  other_methods.py  pairwise_profiles.py  pr_voting_methods.py  pref_grade_profile.py  pref_grade_profile_OLD.py  prob_voting_method.py  probabilistic_methods.py  probabilistic_voting_method.py  profiles.py  profiles_with_ties.py  proportional_methods.py  rankings.py  (+25 more)
strategic-voting/: strategic_voting_algorithms.py  test_algorithms.py
strategic_voting/: strategic_voting_algorithms.py  test_algorithms.py
stv_profilewithties/: __init__.py  cpo_stv.py
tests/: conftest.py  test_all_vms.py  test_analysis.py  test_axiom.py  test_axiom_helpers.py  test_coalition_formation.py  test_dodgson.py  test_generate_profiles.py  test_generate_spatial_profile_from_binned_distribution.py  test_generate_utility_profiles.py  test_grade_methods.py  test_grade_profile.py  test_helper.py  test_helper_review.py  test_invariance_axioms.py  test_io.py  test_iterative_methods.py  test_majority_graph.py  (+26 more)
(+2427 files in other folders)
