[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pref_voting"
version = "1.13.25"
description = "pref_voting is a Python package that contains tools to reason about elections and margin graphs, and implementations of voting methods."
authors = ["Eric Pacuit <epacuit@umd.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/voting-tools/pref_voting"
repository = "https://github.com/voting-tools/pref_voting"

[tool.poetry.dependencies]
python = "^3.6"
scipy = "^1.0.0"
networkx = "^3.0"
tabulate = "^0.9.0"
random2 = "^1.0.1"
matplotlib = "^3.5.2"
nashpy = "^0.0.40"
numba = "^0.58.0"
ortools = "^9.8.0"
prefsampling = "^0.1.16"
filelock = "^3.12.2"

[tool.poetry.dev-dependencies]
