[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pref_voting"
version = "1.18.0"
description = "pref_voting is a Python package that contains tools to reason about elections and margin graphs, and implementations of voting methods."
authors = ["Eric Pacuit <epacuit@umd.edu>", "Wes Holliday <wesholliday@berkeley.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/voting-tools/pref_voting"
repository = "https://github.com/voting-tools/pref_voting"
packages = [{include = "pref_voting"}]  # Explicitly specify the package

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.0.0"
networkx = "^3.0"
tabulate = "^0.9.0"
random2 = "^1.0.1"
matplotlib = "^3.5.2"
nashpy = "^0.0.40"
numba = "^0.61.0"
ortools = "^9.8.0"
prefsampling = "^0.1.16"
filelock = "^3.12.2"
preflibtools = "^2.0.22"
seaborn = "^0.13.2"
pathos = "^0.3.3"
tqdm = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pyflakes = "^3.0.0"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

  [tool.pytest.ini_options]
  filterwarnings = [
      # plot display methods call plt.show(); under the non-interactive Agg backend
      # used for tests (see tests/conftest.py) this is a harmless no-op that warns.
      "ignore:FigureCanvasAgg is non-interactive:UserWarning",
      # import-time noise from a SWIG-wrapped C-extension dependency (SwigPyObject,
      # SwigPyPacked, swigvarlink); nothing to do with pref_voting.
      'ignore:builtin type \w+ has no __module__ attribute:DeprecationWarning',
  ]

